# tactile-pushing

./: .gitignore  README.md
data_collection/digit_pushing/: CMakeLists.txt  README.md  package.xml
data_collection/digit_pushing/launch/: digit_center_cloud.launch  extract_img_tf_dataset.launch  extract_pushest_dataset_json.launch
data_collection/digit_pushing/scripts/: calibrate_disc_obj_center_offset.py  calibrate_ellipse_obj_center_offset.py  calibrate_rect_obj_center_offset.py  write_digit_mean_std_img.py
data_collection/digit_pushing/src/: CenterPointPublisher.py  DigitImageTFDatasetWriter.py  PushestDatasetJsonWriter.py  TFBroadcaster.py
data_collection/digit_pushing/urdfs/: disc.urdf  ellipse.urdf  rectangle.urdf
factor_learning/: setup.py
factor_learning/config/: keypoint_detector.yaml  transform_prediction.yaml
factor_learning/src/factor_learning/dataio/: DigitImageTfDataset.py  DigitImageTfPairsDataset.py  DigitImageTfSeqDataset.py  compute_mean_std_dataset.py  ellipse_feature_extractor.py  visualize_feat_tf_correlations.py  write_ellip_feats_to_file.py  write_img_tf_dataset_as_json.py  write_keypoint_feats_to_file.py
factor_learning/src/factor_learning/eval/: eval_keypoint_detector.py
factor_learning/src/factor_learning/network/: transform_networks.py
factor_learning/src/factor_learning/train/: train_keypoint_detector.py  train_transform_prediction_net.py
factor_learning/src/factor_learning/utils/: utils.py
push_estimation/: CMakeLists.txt  pushest.i  pushestcpp.h
push_estimation/cpp/analytic/: CMakeLists.txt  QuadraticBinaryFactor1D.h  QuadraticUnaryFactor1D.h
push_estimation/cpp/contact/: CMakeLists.txt  TactileRelativeTfPredictionFactor.h
push_estimation/cpp/dynamics/: CMakeLists.txt  QSVelPushMotionObjEEFactor.h  QSVelPushMotionObjFactor.h  QSVelPushMotionRealObjEEFactor.h
push_estimation/cpp/geometry/: CMakeLists.txt  IntersectionPlanarSDFObjEEFactor.h  IntersectionPlanarSDFObjFactor.h
push_estimation/pushestcpp/: CMakeLists.txt  config.h.in
push_estimation/pushestcpp/contact/: CMakeLists.txt  TactileRelativeTfFactor.h  TactileRelativeTfPredictionFactor.h
push_estimation/pushestcpp/dynamics/: CMakeLists.txt  QSVelPushMotionObjEEFactor.h  QSVelPushMotionObjFactor.h  QSVelPushMotionRealObjEEFactor.h
push_estimation/pushestcpp/geometry/: CMakeLists.txt  IntersectionPlanarSDFObjEEFactor.h  IntersectionPlanarSDFObjFactor.h
push_estimation/pushestpy/: setup.py
push_estimation/pushestpy/config/: real_push_graph.yaml
push_estimation/pushestpy/examples/: realPushGraphOptimizeISAM2.py  visualizeRealPushGraphSoln.py
push_estimation/pushestpy/requirements/: requirements.txt
push_estimation/pushestpy/src/pushestpy/dataio/: generate_sdf_from_img.py
push_estimation/pushestpy/src/pushestpy/eval/: qual_visualizer.py  quant_plotter.py
push_estimation/pushestpy/src/pushestpy/utils/: Logger.py  utils.py
push_estimation/pushestpy/tests/: test_intersection_factor.py  test_pose2.py  test_quasistatic_factor.py  test_tactile_factor.py
push_estimation/python/: requirements.txt  setup.py
push_estimation/python/config/: eval_real_push_graph.yaml
push_estimation/python/examples/: quantRealPushGraphSoln.py  realPushGraphOptimizeISAM2.py
push_estimation/python/src/pushestpy/dataio/: data_process.py  generate_disc_sdf.py  generate_rect_sdf.py
